<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_left">Left</string>
    <string name="move_right">Rigth</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="hello_world">Time: </string>
    <string name="level">Level: </string>
    <string name="pause">Pause</string>
    <string name="continueLabel">Continue</string>
    <string name="reset">Reset</string>
    <string name="timerValue">Time: %1$d</string>
    <string name="levelValue">Level: %1$d</string>
</resources>
